# hyprlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  cbindgen.toml  install.sh  justfile  status.txt
assets/: hyprlog.conf  hyprslog.conf
benches/: formatting.rs  hyprland.rs  output.rs  parsing.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/hl_cli/: Cargo.toml
crates/hl_cli/src/: lib.rs  main.rs  util.rs
crates/hl_cli/src/commands/: cleanup.rs  json.rs  log.rs  mod.rs  preset.rs  stats.rs  themes.rs
crates/hl_cli/tests/: cli.rs  util.rs
crates/hl_common/: Cargo.toml
crates/hl_common/src/: args.rs  lib.rs  output.rs  preset.rs
crates/hl_common/tests/: args.rs  output.rs  preset.rs
crates/hl_core/: Cargo.toml
crates/hl_core/src/: cleanup.rs  color.rs  config.rs  format.rs  icon.rs  internal.rs  level.rs  lib.rs  logger.rs  style.rs  tag.rs
crates/hl_core/src/cleanup/: files.rs  mod.rs  options.rs  result.rs  size.rs  stats.rs
crates/hl_core/src/config/: error.rs  mod.rs  structs.rs
crates/hl_core/src/fmt/: color.rs  mod.rs  scope.rs  style.rs
crates/hl_core/src/internal/: mod.rs
crates/hl_core/src/level/: mod.rs
crates/hl_core/src/logger/: builder.rs  mod.rs
crates/hl_core/src/output/: file.rs  json.rs  mod.rs  terminal.rs
crates/hl_core/tests/: cleanup.rs  cleanup_extensions.rs  config.rs  config_apps.rs  config_merge.rs  config_parsing.rs  config_sources.rs  file_output.rs  fmt_color.rs  fmt_format.rs  fmt_icon.rs  fmt_style.rs  fmt_tag.rs  highlight.rs  json_output.rs  label_override.rs  level.rs  logger.rs
crates/hl_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/hl_ffi/src/: lib.rs
crates/hl_ffi/tests/: ffi.rs
crates/hl_shell/: Cargo.toml
crates/hl_shell/src/: lib.rs
crates/hl_shell/tests/: themes.rs
dev/scripts/info/: loc.sh
dev/scripts/lib/: log.sh
dev/scripts/test/: bench.sh  fuzz.sh
docs/plans/: 2026-02-20-human-readable-events-design.md  2026-02-20-human-readable-events.md  2026-03-04-rserver-design.md  2026-03-04-rserver-impl.md
examples/cpp/: CMakeLists.txt  FFI_EXPLAINED.txt  build_and_run.sh  main.cpp
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_color_hex.rs  fuzz_config_sources.rs  fuzz_event_format.rs  fuzz_event_parse.rs  fuzz_format_template.rs  fuzz_highlight.rs  fuzz_style_parse.rs  fuzz_wire_record.rs
include/: hyprlog.h  hyprs_log.h
src/: error.rs  ffi.rs  lib.rs
src/cleanup/: compress.rs  error.rs  files.rs  mod.rs  options.rs  result.rs  size.rs  stats.rs
src/cli/: mod.rs  preset.rs  util.rs
src/cli/commands/: cleanup.rs  hyprland.rs  json.rs  log.rs  mod.rs  preset.rs  send.rs  server.rs  stats.rs  themes.rs
src/config/: mod.rs  structs.rs
src/fmt/: color.rs  format.rs  highlight.rs  icon.rs  mod.rs  scope.rs  style.rs  tag.rs
src/hyprland/: command.rs  error.rs  event.rs  formatter.rs  level_map.rs  listener.rs  mod.rs  socket.rs
src/internal/: mod.rs
src/level/: mod.rs
src/logger/: builder.rs  from_config.rs  json_builder.rs  mod.rs  remote_builder.rs
src/output/: file.rs  json.rs  mod.rs  remote.rs  terminal.rs
src/server/: config.rs  connection.rs  daemon.rs  listener.rs  mod.rs  protocol.rs
src/shell/: mod.rs  themes.rs
tests/: cleanup.rs  cleanup_extensions.rs  cli.rs  cli_util.rs  config.rs  config_apps.rs  config_merge.rs  config_parsing.rs  config_sources.rs  ffi.rs  file_output.rs  fmt_color.rs  fmt_format.rs  fmt_icon.rs  fmt_style.rs  fmt_tag.rs  highlight.rs  hyprland_event.rs  hyprland_event_sdk.rs  hyprland_formatter.rs  hyprland_level_map.rs  hyprland_listener.rs  hyprland_socket.rs  json_output.rs  label_override.rs  level.rs  logger.rs  preset.rs  shell_themes.rs
