[package]
name = "hyprlog"
description = "Flexible logging library for Hyprland and beyond"
version = "0.6.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/ryugen-io/hyprlog"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:rustyline"]
ffi = []
hyprland = ["dep:hypr-sdk", "dep:tokio"]

[lib]
name = "hyprlog"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hyprlog"
path = "src/bin/hyprlog.rs"
required-features = ["cli"]

[lints.rust]
# unsafe_code is handled conditionally in lib.rs via cfg_attr

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
# Core (always)
chrono = "0.4"
directories = "6"
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"
ulid = "1"
hypr-sdk = { git = "https://github.com/ryugen-io/hypr-sdk.git", branch = "main", default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "time"], optional = true }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "15", optional = true }

[build-dependencies]
cbindgen = { version = "0.28", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "output"
harness = false

[[bench]]
name = "hyprland"
harness = false
required-features = ["hyprland"]
