[package]
name = "hl_cli"
description = "Command-line interface for hyprlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hyprlog"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
hl_core = { path = "../hl_core" }
hl_common = { path = "../hl_common" }
hl_shell = { path = "../hl_shell" }
chrono = "0.4"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
