[package]
name = "hl_common"
description = "Shared CLI utilities for hyprlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hl_core = { path = "../hl_core" }
clap = { version = "4", features = ["derive"] }
