[package]
name = "hl_core"
description = "Core logging library for hyprlog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4"
directories = "6"
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"
ulid = "1"

[dev-dependencies]
tempfile = "3"
