[package]
name = "hl_ffi"
description = "C-ABI FFI bindings for hyprlog"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
hl_core = { path = "../hl_core" }

[build-dependencies]
cbindgen = "0.28"
